Mon Mar 15 03:39:47 1999  George Lebl  <jirka@5z.com>

	* gtk/gtkdnd.c: (gtk_drag_highlight) swap the
	  gtk_drag_highlight_expose and gtk_drag_highlight_paint since
	  it was connecting a void function to expose_event and the int
	  returning function to the draw signal

Wed Mar 10 23:49:55 1999  Lars Hamann  <lars@gtk.org>

	* gtk/gtklayout.c (gtk_layout_adjustment_changed): fixed a few
	width/height mixups.
	
	* gtk/gtkctree.c (tree_delete): emit an tree_unselect_row signal
	if needed.

Wed Mar 10 02:07:31 1999  Tim Janik  <timj@gtk.org>

	* merged from 1.3:
1999-03-09  Federico Mena Quintero  <federico@nuclecu.unam.mx>

	* gtk/gtkstyle.c (gtk_default_draw_handle): Significantly reduced
	the number of calls to gdk_draw_point() (and thus to X) by
	clipping the points by hand.

	* gtk/gtkhandlebox.c (draw_textured_frame): Actually make use of
	the clip parameter.
	(gtk_handle_box_paint): Only paint the handle if the expose area
	intersects it.

Wed Mar 10 00:11:32 1999  Tim Janik  <timj@gtk.org>

	* gtk/testgtk.c (create_item_factory): unref the item factory after
	window's destruction.

	* gtk/gtkmenushell.c (gtk_menu_shell_activate_item): keep a reference
	count on the menu shell around the menu item's activation, since the
	signal emission may cause menu shell destruction.

	* gtk/gtkitemfactory.c:
	the previous code leaked one accel group per menu. we use
	gtk_menu_get_uline_accel_group() now to fix that, and with that
	also create the underline accelerator group of the menus only if
	required (i.e. an underline accelerator has been specified).
	(gtk_item_factory_construct):
	(gtk_item_factory_create_item): removed code that would create an
	extra accel group for the menu (and leak references).
	(gtk_item_factory_create_item): adapted the underline accelerator
	installation code to properly feature gtk_menu_get_uline_accel_group().

	* gtk/gtkmenu.[hc]: added gtk_menu_get_accel_group() to retrive